tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_42.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := (- 1223);
               q := ((((x + 1) MOD (- 2)) - ((+ 2) MOD 200)) >= 1223);
               y := 2;
               y := 1223;
               q := (~ q);
               y := z;
               p := ((2 DIV ((z - 0) DIV (200 + x))) >= (((- 1) DIV 1) - (y + 200)));
               q := q;
               z := (z - (2 * 2));
  (* error *)  x := ((- x) - (- ((q * 2) MOD y)))
END Test20.